**************************************************
*                                                *
*	CHANGELOG: CMS_GEM_Analysis_Framework        *
*	VERSION: 4.0                                 *
*	LAST UPDATE: June 13 2017                    *
*                                                *
**************************************************

Update: August 21th 2017
==================================================
-> README.txt: Added instructions for Produce_Config_File.py,QC3.py,QC4_*.py and QC5_*.py scripts ( 3.c.iii Analysis of QC data stored in an excel file )
-> QC3.py,QC4_*.py and QC5_*.py: Import PlotOptions instead of Options

Update: August 17th 2017
==================================================
->options.py: Switched from argparse to optparse, add append action to LatexLines option
->Produce_Config_File.py: add loop to print Latexlines from list
-> QC3.py,QC4_*.py,QC5_*.py: append LatexLines to cmd


->options.py: changed YaxisScale, SetErrX, SetErrY and Fit arguments store type (back to boolean)
->Produce_Config_File.py: Changed the if statement for the arguments mentioned above (boolean instead of strings)
->QC3.py: Changed the way the above arguments are appended to cmd 
->QC4_*.py: Changed the way the above arguments are appended to cmd 
->QC5_*.py: Changed the way the above arguments are appended to cmd 

Update: August 16th 2017
==================================================
scripts/setup_CMS_GEM.sh: add pip2.7 install --user xlrd (library used by produce_config_file.py)


Update: August 15th 2017
==================================================
->Produce_Config_File.py: Added code to fit the plotted data (only when —Fit option is true)
->Produce_Config_File.py and options.py: Changed all bool statements to strings after addressing a problem with bool(args.Fit) argument being true/false when appending to cmd 
->options.py: Added arguments to choose the details for the fit